Revise .env file with placeholder values
Updated sensitive information in .env file.

--- a/Inventory-Management/.env
+++ b/Inventory-Management/.env
@@ -1,9 +1,9 @@
 PORT=5000
-MONGO_URI=mongodb+srv://bharanisri73_db_user:MiG5YVhyPTql66o1@inventorymanagement.2suutmk.mongodb.net/
-JWT_SECRET=mySuperSecretKey
+MONGO_URI=URl
+JWT_SECRET=key
 
 # Email Configuration
 EMAIL_SERVICE=gmail
-EMAIL_USER=e0224035@sriher.edu.in
-EMAIL_PASS=rnha aqro fhig prhh
-EMAIL_FROM=e0224035@sriher.edu.in
+EMAIL_USER=Email
+EMAIL_PASS=less secure app pass
+EMAIL_FROM=Email
